# nemori-desktop

./: .gitignore  README.md  build.sh  start-dev.sh
.github/workflows/: release.yml
assets/: README_CN.md
backend/: __init__.py  main.py  nemori-backend.spec  pyproject.toml
backend/agents/: __init__.py  episodic_agent.py  executor.py  main_agent.py  memory_manager.py  model_adapter.py  profile_agent.py  semantic_agent.py  visualization_agent.py
backend/agents/middleware/: __init__.py  summarization.py
backend/agents/tools/: __init__.py  memory_tools.py  proactive_tools.py  profile_tools.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  agent.py  chat.py  conversations.py  memories.py  proactive.py  profile.py  profile_agent.py  profile_files.py  screenshots.py  settings.py  visualization.py
backend/config/: settings.py
backend/memory/: __init__.py  episodic.py  manager.py  profile.py  segmentation.py  semantic.py  visualization.py
backend/models/: __init__.py  agent_schemas.py  schemas.py
backend/proactive/: __init__.py  core.py  task_scheduler.py  wakeup.py
backend/prompts/: __init__.py  agent_prompts.py  episodic_prompts.py  language.py  proactive_prompts.py  profile_agent_prompts.py  semantic_prompts.py  summarization_prompts.py
backend/services/: __init__.py  llm_service.py  memory_service.py  profile_agent.py  profile_manager.py  profile_scheduler.py  screenshot_service.py
backend/storage/: __init__.py  database.py  vector_store.py
backend/utils/: __init__.py  image.py
docs/: AGENT_DESIGN.md  BUILD.md  FRONTEND_DEVELOPMENT.md  PACKAGING.md  PROACTIVE_AGENT.md
frontend/: electron-builder.yml  electron.vite.config.1768374707189.mjs  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json
frontend/resources/: icon.icns
frontend/src/: env.d.ts
frontend/src/main/: index.ts
frontend/src/main/services/: BackendService.ts  ScreenshotService.ts  TrayService.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.tsx  main.tsx
frontend/src/renderer/src/assets/: index.css
frontend/src/renderer/src/components/: Layout.tsx  NemoriBot.tsx
frontend/src/renderer/src/i18n/: index.ts
(+14 files in other folders)
