[project]
name = "nemori-backend"
version = "1.0.0"
description = "Nemori AI Memory Assistant - Backend Service"
authors = [{ name = "FellouAI" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "openai>=1.10.0",
    "chromadb>=0.4.22",
    "pillow>=10.2.0",
    "imagehash>=4.3.1",
    "mss>=9.0.1",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "isort>=5.13.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["*.pyc", "__pycache__", "*.egg-info"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
